--- a/templates/accounts/signin.html
+++ b/templates/accounts/signin.html
@@ -20,14 +20,14 @@
                         <div class="wrap d-md-flex">
                             <div class="text-wrap p-4 p-lg-5 d-flex img" style="background-image: url({% static 'images/bg.jpg' %});">
                                 <div class="text w-100">
-                                    <h2 class="mb-4">Welcome to Event Calendar</h2>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                    <h2 class="mb-4">Event Calendar</h2>
+                                    <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
                                 </div>
                             </div>
                             <div class="login-wrap p-4 p-md-5">
                                 <div class="row justify-content-center py-md-5">
                                     <div class="col-lg-9">
-                                        <div class="social-wrap">
+                                        <!-- <div class="social-wrap">
                                             <h3 class="mb-3 text-center">Signin with this services</h3>
                                             <p class="social-media d-flex justify-content-center">
                                                 <a href="#" class="social-icon google d-flex align-items-center justify-content-center"><span class="fa fa-google"></span></a>
@@ -37,7 +37,7 @@
                                             <p class="or">
                                                 <span>or</span>
                                             </p>
-                                        </div>
+                                        </div> -->
                                         <form action="#" method="post" class="signup-form">
                                             {% csrf_token %}
                                             <div class="row">
