--- a/templates/accounts/signin.html
+++ b/templates/accounts/signin.html
@@ -20,7 +20,7 @@
                         <div class="wrap d-md-flex">
                             <div class="text-wrap p-4 p-lg-5 d-flex img" style="background-image: url({% static 'images/bg.jpg' %});">
                                 <div class="text w-100">
-                                    <h2 class="mb-4">Event Calendar</h2>
+                                    <h2 class="mb-4">Календарь событий</h2>
                                     <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
                                 </div>
                             </div>
@@ -55,13 +55,13 @@
                                                 </div>
                                                 <div class="col-md-12">
                                                     <div class="form-group">
-                                                        <button type="submit" class="btn btn-primary">Sign In</button>
+                                                        <button type="submit" class="btn btn-primary">Войти</button>
                                                     </div>
                                                 </div>
                                             </div>
                                         </form>
                                         <div class="w-100">
-                                            <p class="mt-4">New in event calendar? <a href="{% url 'accounts:signup' %}">Sign Up</a></p>
+                                            <p class="mt-4">Еще не зарегистрированы? <a href="{% url 'accounts:signup' %}">Регистрация</a></p>
                                         </div>
                                     </div>
                                 </div>
