--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	{% load static %}
     <head>
-        <title>Sign Up | Event Calendar</title>
+        <title>Вход | Календарь событий</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -20,7 +20,7 @@
                         <div class="wrap d-md-flex">
                             <div class="text-wrap p-4 p-lg-5 d-flex img" style="background-image: url({% static 'images/bg.jpg' %});">
                                 <div class="text w-100">
-                                    <h2 class="mb-4">Event Calendar</h2>
+                                    <h2 class="mb-4">Календарь событий</h2>
                                     <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
                                 </div>
                             </div>
