--- a/templates/calendarapp/dashboard.html
+++ b/templates/calendarapp/dashboard.html
@@ -5,12 +5,12 @@
 
 {% block breadcrumb %}
     <div>
-        <h1><i class="fa fa-dashboard"></i> Dashboard</h1>
-        <p>Event Dashboard</p>
+        <h1><i class="fa fa-dashboard"></i>Администрирование</h1>
+        <p>Администрирование событий</p>
     </div>
     <ul class="app-breadcrumb breadcrumb">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
-        <li class="breadcrumb-item"><a >Dashboard</a></li>
+        <li class="breadcrumb-item"><a >Администрирование</a></li>
     </ul>
 {% endblock breadcrumb %}
 
