--- a/templates/calendarapp/calendar.html
+++ b/templates/calendarapp/calendar.html
@@ -80,37 +80,45 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade show" id="detailModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                  <div class="modal-content">
-                      <div class="modal-header bg-primary">
-                          <h5 class="modal-title text-white" id="title_event_detail"></h5>
-                          <button id="modalDetailClose" type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                          </button>
-                      </div>
-                      <form method="">
-                          {% csrf_token %}
-                          <div class="modal-body">
-                              
-                              <div class="form-group">
-                                  <label for="message-text" class="col-form-label">Описание:</label>
-                                  <p id = "description_event_detail">
-                                  </p>
-                              </div>
-                              <div class="form-group">
-                                  <label for="message-text" class="col-form-label">Начало:</label>
-                                  <p id = "start_event_detail">
-                              </div>
-                              <div class="form-group">
-                                  <label for="message-text" class="col-form-label">Окончание:</label>
-                                  <p id = "end_event_detail">
-                              </div>
-                          </div>
-                          <div class="modal-footer">
-                              <button id="delete-event-button" data-event-id="" type="button" class="btn btn-danger">Удалить</button>
-                              <button id="add-to-next-week" data-event-id-week="" type="button" class="btn btn-success">На следующую неделю</button>
-                              <button id="add-to-next-day" data-event-id-day="" type="button" class="btn btn-primary">На следующий день</button>
+            <div class="modal fade show" id="detailModal" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header bg-primary">
+                            <h5 class="modal-title text-white" id="title_event_detail"></h5>
+                            <button id="modalDetailClose" type="button" class="close" data-dismiss="modal"
+                                    aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <form method="">
+                            {% csrf_token %}
+                            <div class="modal-body">
+
+                                <div class="form-group">
+                                    <label for="message-text" class="col-form-label">Описание:</label>
+                                    <p id="description_event_detail">
+                                    </p>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="col-form-label">Начало:</label>
+                                    <p id="start_event_detail">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="col-form-label">Окончание:</label>
+                                    <p id="end_event_detail">
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button id="delete-event-button" data-event-id="" type="button" class="btn btn-danger">
+                                    Удалить
+                                </button>
+                                <button id="add-to-next-week" data-event-id-week="" type="button"
+                                        class="btn btn-success">На следующую неделю
+                                </button>
+                                <button id="add-to-next-day" data-event-id-day="" type="button" class="btn btn-primary">
+                                    На следующий день
+                                </button>
 
                             </div>
                         </form>
@@ -126,136 +134,176 @@
 {% block extrascripts %}
 <script src="{% static 'calender/main.js' %}"></script>
 <script>
-  function converterDataParaDjangoFormat(data) {
-      const dataJS = new Date(data);
-      const year = dataJS.getFullYear();
-      const month = (dataJS.getMonth() + 1).toString().padStart(2, '0');
-      const day = dataJS.getDate().toString().padStart(2, '0');
-      const hour = dataJS.getHours().toString().padStart(2, '0');
-      const minute = dataJS.getMinutes().toString().padStart(2, '0');
-      const second = dataJS.getSeconds().toString().padStart(2, '0');
-      const formatoDjango = `${year}-${month}-${day} ${hour}:${minute}:${second}`;
-      return formatoDjango;
-      
-  }
-    document.addEventListener('DOMContentLoaded', function() {
-      var calendarEl = document.getElementById('calendar');
-      var today = new Date();
+    function converterDataParaDjangoFormat(data) {
+        const dataJS = new Date(data);
+        const year = dataJS.getFullYear();
+        const month = (dataJS.getMonth() + 1).toString().padStart(2, '0');
+        const day = dataJS.getDate().toString().padStart(2, '0');
+        const hour = dataJS.getHours().toString().padStart(2, '0');
+        const minute = dataJS.getMinutes().toString().padStart(2, '0');
+        const second = dataJS.getSeconds().toString().padStart(2, '0');
+        const formatoDjango = `${year}-${month}-${day} ${hour}:${minute}:${second}`;
+        return formatoDjango;
 
-      var calendar = new FullCalendar.Calendar(calendarEl, {
-        headerToolbar: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'dayGridMonth,timeGridWeek,timeGridDay,list'
-        },
-        initialDate: today,
-        navLinks: true, // can click day/week names to navigate views
-        selectable: true,
-        selectMirror: true,
-        select: function(arg) {
-          console.log('clicked')
-          console.log(arg.start)
-          console.log(arg.end)
-          var modal = document.getElementById('eventModal')
-          modal.style.display = 'block'
-          document.getElementById('id_start_time').value = converterDataParaDjangoFormat(arg.start);
-          document.getElementById('id_end_time').value = converterDataParaDjangoFormat(arg.end);
-          calendar.unselect()
-        },
-        
-        // THIS KEY WON'T WORK IN PRODUCTION!!!
-        // To make your own Google API key, follow the directions here:
-        // http://fullcalendar.io/docs/google_calendar/
-        // googleCalendarApiKey: 'AIzaSyCqCxjjLtjbtkX37aOtWB8OfwBLy_6QuYk',
+    }
+      document.addEventListener('DOMContentLoaded', function() {
+        var calendarEl = document.getElementById('calendar');
+        var today = new Date();
 
-        // bangladesh Holidays
-        // events: 'bn.bd#holiday@group.v.calendar.google.com',
-        eventClick: function(arg) {
-          
-          console.log('clicked')
-          var title = arg.event.title;
-          var start = formatDateTime(arg.event.start) ;
-          var end = formatDateTime(arg.event.end);
-          var description = arg.event.extendedProps.description || '';
-          var id = arg.event.id;
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+          headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay,list'
+          },
+          initialDate: today,
+          navLinks: true, // can click day/week names to navigate views
+          selectable: true,
+          selectMirror: true,
+          select: function(arg) {
+            console.log('clicked')
+            console.log(arg.start)
+            console.log(arg.end)
+            var modal = document.getElementById('eventModal')
+            modal.style.display = 'block'
+            document.getElementById('id_start_time').value = converterDataParaDjangoFormat(arg.start);
+            document.getElementById('id_end_time').value = converterDataParaDjangoFormat(arg.end);
+            calendar.unselect()
+          },
 
-          var modalInputEnd = document.getElementById('end_event_detail'); 
+          // THIS KEY WON'T WORK IN PRODUCTION!!!
+          // To make your own Google API key, follow the directions here:
+          // http://fullcalendar.io/docs/google_calendar/
+          // googleCalendarApiKey: 'AIzaSyCqCxjjLtjbtkX37aOtWB8OfwBLy_6QuYk',
 
-          var modal = document.getElementById('detailModal')
-          var modalTitle = document.getElementById('title_event_detail'); 
-          var modalStart = document.getElementById('start_event_detail'); 
-          var modalEnd = document.getElementById('end_event_detail'); 
-          var modalDescripition = document.getElementById('description_event_detail'); 
-          var deleteButton = document.getElementById("delete-event-button");
-          var nextWeek = document.getElementById("add-to-next-week");
-          var nextDay = document.getElementById("add-to-next-day");
+          // bangladesh Holidays
+          // events: 'bn.bd#holiday@group.v.calendar.google.com',
+          eventClick: function(arg) {
 
-          deleteButton.setAttribute("data-event-id", id);
-          nextWeek.setAttribute("data-event-id-week", id);
-          nextDay.setAttribute("data-event-id-day", id);
-          modal.style.display = 'block' 
-          
-          modalTitle.textContent = title;
-          modalStart.textContent = start;
-          modalEnd.textContent = end;
-          modalDescripition.textContent = description;
-          
-         
-          modal.style.display = 'block';
-        },
-        editable: true,
-        dayMaxEvents: true, // allow "more" link when too many events
-        events: {{ events|safe }},
-        // events: [
-        //   {
-        //     title: 'All Day Event',
-        //     start: '2021-06-26'
-        //   },
-        //   {
-        //     groupId: 999,
-        //     title: 'Repeating Event',
-        //     start: '2020-09-16T16:00:00'
-        //   },
-        //   {
-        //     title: 'Conference',
-        //     start: '2020-09-11',
-        //     end: '2020-09-13'
-        //   },
-        //   {
-        //     title: 'Click for Google',
-        //     url: 'http://google.com/',
-        //     start: '2020-09-28'
-        //   }
-        // ]
+            console.log('clicked')
+            var title = arg.event.title;
+            var start = formatDateTime(arg.event.start) ;
+            var end = formatDateTime(arg.event.end);
+            var description = arg.event.extendedProps.description || '';
+            var id = arg.event.id;
+
+            var modalInputEnd = document.getElementById('end_event_detail');
+
+            var modal = document.getElementById('detailModal')
+            var modalTitle = document.getElementById('title_event_detail');
+            var modalStart = document.getElementById('start_event_detail');
+            var modalEnd = document.getElementById('end_event_detail');
+            var modalDescripition = document.getElementById('description_event_detail');
+            var deleteButton = document.getElementById("delete-event-button");
+            var nextWeek = document.getElementById("add-to-next-week");
+            var nextDay = document.getElementById("add-to-next-day");
+
+            deleteButton.setAttribute("data-event-id", id);
+            nextWeek.setAttribute("data-event-id-week", id);
+            nextDay.setAttribute("data-event-id-day", id);
+            modal.style.display = 'block'
+
+            modalTitle.textContent = title;
+            modalStart.textContent = start;
+            modalEnd.textContent = end;
+            modalDescripition.textContent = description;
+
+
+            modal.style.display = 'block';
+          },
+          editable: true,
+          dayMaxEvents: true, // allow "more" link when too many events
+          events: {{ events|safe }},
+          // events: [
+          //   {
+          //     title: 'All Day Event',
+          //     start: '2021-06-26'
+          //   },
+          //   {
+          //     groupId: 999,
+          //     title: 'Repeating Event',
+          //     start: '2020-09-16T16:00:00'
+          //   },
+          //   {
+          //     title: 'Conference',
+          //     start: '2020-09-11',
+          //     end: '2020-09-13'
+          //   },
+          //   {
+          //     title: 'Click for Google',
+          //     url: 'http://google.com/',
+          //     start: '2020-09-28'
+          //   }
+          // ]
+        });
+
+        calendar.render();
       });
+      const closeBtn1 = document.getElementById('modalClose1');
+      const closeBtn2 = document.getElementById('modalClose2');
+      const closeBtn3 = document.getElementById('modalDetailClose');
+      closeBtn1.addEventListener('click',()=>{
+        const eventModal = document.getElementById('eventModal')
+        eventModal.style.display = 'none';
+      });
+      closeBtn2.addEventListener('click',()=>{
+        const eventModal = document.getElementById('eventModal')
+        eventModal.style.display = 'none';
+      });
+      closeBtn3.addEventListener('click',()=>{
+        const eventModal = document.getElementById('detailModal')
+        eventModal.style.display = 'none';
+      });
+      function formatDateTime(dateTime) {
+        const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', timeZoneName: 'short' };
+        const dataFormatada = new Date(dateTime).toLocaleDateString('en-US', options);
+        return dataFormatada;
+      };
+      document.getElementById('delete-event-button').addEventListener('click', function() {
+        const eventId = this.getAttribute('data-event-id');
+        if (confirm('Are you sure you want to delete this event?')) {
+            $.ajax({
+                url: `/delete_event/${eventId}/`,
+                type: 'POST',
+                data: {
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(response) {
+                    alert(response.message);
+                    window.location.reload();
+                },
+                error: function(xhr, status, error) {
+                    alert('Error!');
+                }
 
-      calendar.render();
+            });
+        }});
+
+        document.getElementById('add-to-next-week').addEventListener('click', function() {
+            const eventId = this.getAttribute('data-event-id-week');
+            if (confirm('Are you sure you want add this event to next week?')) {
+                $.ajax({
+                  url: `/next_week/${eventId}/`,
+                    type: 'POST',
+                    data: {
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                    },
+                    success: function(response) {
+                        alert(response.message);
+                        window.location.reload();
+                    },
+                    error: function(xhr, status, error) {
+                        alert('Error!');
+                    }
+                });
+            }
     });
-    const closeBtn1 = document.getElementById('modalClose1');
-    const closeBtn2 = document.getElementById('modalClose2');
-    const closeBtn3 = document.getElementById('modalDetailClose');
-    closeBtn1.addEventListener('click',()=>{
-      const eventModal = document.getElementById('eventModal')
-      eventModal.style.display = 'none';
-    });
-    closeBtn2.addEventListener('click',()=>{
-      const eventModal = document.getElementById('eventModal')
-      eventModal.style.display = 'none';
-    });
-    closeBtn3.addEventListener('click',()=>{
-      const eventModal = document.getElementById('detailModal')
-      eventModal.style.display = 'none';
-    });
-    function formatDateTime(dateTime) {
-      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', timeZoneName: 'short' };
-      const dataFormatada = new Date(dateTime).toLocaleDateString('en-US', options);
-      return dataFormatada;
-    };
-    document.getElementById('delete-event-button').addEventListener('click', function() {
-      const eventId = this.getAttribute('data-event-id');
-      if (confirm('Are you sure you want to delete this event?')) {
+
+    document.getElementById('add-to-next-day').addEventListener('click', function() {
+      const eventId = this.getAttribute('data-event-id-day');
+      if (confirm('Are you sure you want add this event to next day?')) {
           $.ajax({
-              url: `/delete_event/${eventId}/`,
+            url: `/next_day/${eventId}/`,
               type: 'POST',
               data: {
                   csrfmiddlewaretoken: '{{ csrf_token }}',
@@ -267,49 +315,9 @@
               error: function(xhr, status, error) {
                   alert('Error!');
               }
-          
           });
-      }});
-      
-      document.getElementById('add-to-next-week').addEventListener('click', function() {
-          const eventId = this.getAttribute('data-event-id-week');
-          if (confirm('Are you sure you want add this event to next week?')) {
-              $.ajax({
-                url: `/next_week/${eventId}/`,
-                  type: 'POST',
-                  data: {
-                      csrfmiddlewaretoken: '{{ csrf_token }}',
-                  },
-                  success: function(response) {
-                      alert(response.message);
-                      window.location.reload();
-                  },
-                  error: function(xhr, status, error) {
-                      alert('Error!');
-                  }
-              });
-          }
+      }
   });
-
-  document.getElementById('add-to-next-day').addEventListener('click', function() {
-    const eventId = this.getAttribute('data-event-id-day');
-    if (confirm('Are you sure you want add this event to next day?')) {
-        $.ajax({
-          url: `/next_day/${eventId}/`,
-            type: 'POST',
-            data: {
-                csrfmiddlewaretoken: '{{ csrf_token }}',
-            },
-            success: function(response) {
-                alert(response.message);
-                window.location.reload();
-            },
-            error: function(xhr, status, error) {
-                alert('Error!');
-            }
-        });
-    }
-});
 
 </script>
 {% endblock extrascripts %}
