fix bug with not see calendar after create event

--- a/templates/calendarapp/calendar.html
+++ b/templates/calendarapp/calendar.html
@@ -64,6 +64,19 @@
                                     {{ form.description }}
                                 </div>
                                 <div class="form-group">
+                                    <label for="message-text" class="col-form-label">Тренер:</label>
+                                    {{ form.trainer }}
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="col-form-label">Направление:</label>
+                                    {{ form.direction }}
+                                </div>
+                                <div class="form-group">
+                                    <label for="message-text" class="col-form-label">Максимальное кол-во
+                                        участников:</label>
+                                    {{ form.max_participants }}
+                                </div>
+                                <div class="form-group">
                                     <label for="message-text" class="col-form-label">Время начала:</label>
                                     {{ form.start_time }}
                                 </div>
